--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
             <div class="list-group">
                 <a href="1_1.html" class="list-group-item list-group-item-action">Práctica 1</a>
-                <a href="1_6__3.html" class="list-group-item list-group-item-action">Práctica 2</a>
-                <a href="1_6__3.html" class="list-group-item list-group-item-action">Práctica 3</a>
-                <a href="1_6__3.html" class="list-group-item list-group-item-action">Práctica 4</a>
-                <a href="1_6__3.html" class="list-group-item list-group-item-action">Práctica 5</a>
-                <a href="1_6__3.html" class="list-group-item list-group-item-action">Práctica 6_1</a>
-                <a href="1_6__3.html" class="list-group-item list-group-item-action">Práctica 6_2</a>
+                <a href="2.html" class="list-group-item list-group-item-action">Práctica 2</a>
+                <a href="3.html" class="list-group-item list-group-item-action">Práctica 3</a>
+                <a href="4.html" class="list-group-item list-group-item-action">Práctica 4</a>
+                <a href="5.html" class="list-group-item list-group-item-action">Práctica 5</a>
+                <a href="1_6_1.html" class="list-group-item list-group-item-action">Práctica 6_1</a>
+                <a href="1_6__2.html" class="list-group-item list-group-item-action">Práctica 6_2</a>
                 <a href="1_6__3.html" class="list-group-item list-group-item-action">Práctica 6_3</a>
             </div>
         </div>
