--- a/4.html
+++ b/4.html
@@ -63,7 +63,7 @@
             <p>Santiago, esta es la cuarta práctica <br>
             Con mejoras ;).</p>
 
-          <h2>Plantas</h2>
+          <h2 style="text-aling: left">Plantas</h2>
 
             <table border = “1”>
 
