--- a/6__2.html
+++ b/6__2.html
@@ -44,14 +44,21 @@
         <p class="menu-title">Menú</p>
 
         <div class="menu-content">
-            <a class="menu-link" href="1_1.html" title="Práctica 1">Práctica 1</a>
-            <a class="menu-link" href="index.html" title="Indice">Indice</a>
-            <a class="menu-link" href="2.html" title="Práctica 2">Práctica 2</a>
-            <a class="menu-link" href="3.html" title="Práctica 3">Práctica 3</a>
-            <a class="menu-link" href="4.html" title="Práctica 4">Práctica 4</a>
-            <a class="menu-link" href="5.html" title="Práctica 5">Práctica 5</a>
-            <a class="menu-link" href="6_1.html" title="Práctica 6_1">Práctica 6_1</a>
-            <a class="menu-link" href="6__3.html" title="Práctica 6__3">Práctica 6_3</a>
+               <a class="menu-link" href="1_1.html" title="Práctica 1">Práctica 1</a>
+                    <a class="menu-link" href="index.html" title="Indice">Indice</a>
+                    <a class="menu-link" href="3.html" title="Práctica 3">Práctica 3</a>
+                    <a class="menu-link" href="4.html" title="Práctica 4">Práctica 4</a>
+                    <a class="menu-link" href="5.html" title="Práctica 5">Práctica 5</a>
+                    <a class="menu-link" href="6_1.html" title="Práctica 6_1">Práctica 6_1</a>
+                    <a class="menu-link" href="6__2.html" title="Práctica 6_2">Práctica 6_2</a>
+                    <a class="menu-link" href="6__3.html" title="Práctica 6_3">Práctica 6_3</a>
+                    <a class="menu-link" href="7.html" title="Práctica 7">Práctica 7</a>
+                    <a class="menu-link" href="8.html" title="Práctica 8">Práctica 8</a>
+                    <a class="menu-link" href="9.html" title="Práctica 9">Práctica 9</a>
+                    <a class="menu-link" href="10.html" title="Práctica 10">Práctica 10</a>
+                    <a class="menu-link" href="11.html" title="Práctica 11">Práctica 11</a>
+                    <a class="menu-link" href="12.html" title="Práctica 12">Práctica 12</a>
+                    <a class="menu-link" href="final.html" title="Práctica final">Práctica FINAL</a>
             
         </div>
     </div>
