--- a/6__3.html
+++ b/6__3.html
@@ -7,52 +7,59 @@
 
     <title>Marta Sempere 2ºD</title>
 
-    <style>
-        .menu {
-            padding: 10px;
-            border-bottom: 2px solid #996699;
-            font-size: 20px;
-        }
+            <style>
+                .menu {
+                  padding: 10px;
+                  border-bottom: 2px solid #996699;
+                  font-size: 20px;
+                }
+                  .menu:hover > .menu-content {
+                    display: flex;
+                    justify-content: space-around;
+                  }
+                  .menu:hover > .menu-title {
+                    display: none;
+                  }
+                  .menu-title {
+                    text-align: center;
+                    margin: 15px;
+                    font-weight: bold;
+                  }
+                  .menu-content {
+                    display: none;
+                  }
+                  .menu-link {
+                    margin: 10px;
+                    padding: 5px;
+                  }
+              </style>
 
-            .menu:hover > .menu-content {
-                display: flex;
-                justify-content: space-around;
-            }
+<title>Marta Sempere 2ºD</title>
 
-            .menu:hover > .menu-title {
-                display: none;
-            }
-
-            .menu-title {
-                text-align: center;
-                margin: 15px;
-                font-weight: bold;
-            }
-
-            .menu-content {
-                display: none;
-            }
-
-            .menu-link {
-                margin: 10px;
-                padding: 5px;
-            }
-    </style>
 </head>
 
-<body style="background-color: #FFE4E1;font-family: Arial">
+<body  style="text-align: center;font-family: Arial ;background-color: #ffeff7">
+
     <div class="menu">
         <p class="menu-title">Menú</p>
 
         <div class="menu-content">
-            <a class="menu-link" href="index.html" title="Índice">Índice</a>
-            <a class="menu-link" href="2.html" title="Práctica 1">Práctica 1</a>
-            <a class="menu-link" href="2.html" title="Práctica 2">Práctica 2</a>
-            <a class="menu-link" href="3.html" title="Práctica 3">Práctica 3</a>
-            <a class="menu-link" href="4.html" title="Práctica 4">Práctica 4</a>
-            <a class="menu-link" href="5.html" title="Práctica 5">Práctica 5</a>
-            <a class="menu-link" href="6_1.html" title="Práctica 6_1">Práctica 6_1</a>
-            <a class="menu-link" href="6__2.html" title="Práctica 6_2">Práctica 6_2</a>
+               <a class="menu-link" href="1_1.html" title="Práctica 1">Práctica 1</a>
+                    <a class="menu-link" href="index.html" title="Indice">Indice</a>
+                    <a class="menu-link" href="6__3.html" title="Práctica 2">Práctica 6_3</a>
+                    <a class="menu-link" href="3.html" title="Práctica 3">Práctica 3</a>
+                    <a class="menu-link" href="4.html" title="Práctica 4">Práctica 4</a>
+                    <a class="menu-link" href="5.html" title="Práctica 5">Práctica 5</a>
+                    <a class="menu-link" href="6_1.html" title="Práctica 6_1">Práctica 6_1</a>
+                    <a class="menu-link" href="6__2.html" title="Práctica 6_2">Práctica 6_2</a>
+                    <a class="menu-link" href="7.html" title="Práctica 7">Práctica 7</a>
+                    <a class="menu-link" href="8.html" title="Práctica 8">Práctica 8</a>
+                    <a class="menu-link" href="9.html" title="Práctica 9">Práctica 9</a>
+                    <a class="menu-link" href="10.html" title="Práctica 10">Práctica 10</a>
+                    <a class="menu-link" href="11.html" title="Práctica 11">Práctica 11</a>
+                    <a class="menu-link" href="12.html" title="Práctica 12">Práctica 12</a>
+                    <a class="menu-link" href="final.html" title="Práctica final">Práctica FINAL</a>
+            
         </div>
     </div>
 
