--- a/6__2.html
+++ b/6__2.html
@@ -6,8 +6,7 @@
             <meta charset="utf-8"/>
             <meta name="description" content="Página de enseñanza de html5">
             <meta name="keywords" content="html5, css3, diseño web"/>           
-
-            <style>
+          <style>
                 .menu {
                   padding: 10px;
                   border-bottom: 2px solid #996699;
@@ -46,12 +45,12 @@
         <div class="menu-content">
                <a class="menu-link" href="1_1.html" title="Práctica 1">Práctica 1</a>
                     <a class="menu-link" href="index.html" title="Indice">Indice</a>
+                    <a class="menu-link" href="6__3.html" title="Práctica 2">Práctica 6_3</a>
                     <a class="menu-link" href="3.html" title="Práctica 3">Práctica 3</a>
                     <a class="menu-link" href="4.html" title="Práctica 4">Práctica 4</a>
                     <a class="menu-link" href="5.html" title="Práctica 5">Práctica 5</a>
                     <a class="menu-link" href="6_1.html" title="Práctica 6_1">Práctica 6_1</a>
-                    <a class="menu-link" href="6__2.html" title="Práctica 6_2">Práctica 6_2</a>
-                    <a class="menu-link" href="6__3.html" title="Práctica 6_3">Práctica 6_3</a>
+                    <a class="menu-link" href="6__2.html" title="Práctica 6_3">Práctica 6_2</a>
                     <a class="menu-link" href="7.html" title="Práctica 7">Práctica 7</a>
                     <a class="menu-link" href="8.html" title="Práctica 8">Práctica 8</a>
                     <a class="menu-link" href="9.html" title="Práctica 9">Práctica 9</a>
