--- a/6_1.html
+++ b/6_1.html
@@ -50,7 +50,7 @@
                     <a class="menu-link" href="3.html" title="Práctica 3">Práctica 3</a>
                     <a class="menu-link" href="4.html" title="Práctica 4">Práctica 4</a>
                     <a class="menu-link" href="5.html" title="Práctica 5">Práctica 5</a>
-                    <a class="menu-link" href="6_2.html" title="Práctica 6_2">Práctica 6_2</a>
+                    <a class="menu-link" href="6__2.html" title="Práctica 6_2">Práctica 6_2</a>
                     <a class="menu-link" href="6__3.html" title="Práctica 6_3">Práctica 6_3</a>
                     <a class="menu-link" href="7.html" title="Práctica 7">Práctica 7</a>
                     <a class="menu-link" href="8.html" title="Práctica 8">Práctica 8</a>
