--- a/6__3.html
+++ b/6__3.html
@@ -46,7 +46,7 @@
         <div class="menu-content">
                <a class="menu-link" href="1_1.html" title="Práctica 1">Práctica 1</a>
                     <a class="menu-link" href="index.html" title="Indice">Indice</a>
-                    <a class="menu-link" href="6__3.html" title="Práctica 2">Práctica 6_3</a>
+                    <a class="menu-link" href="2.html" title="Práctica 2">Práctica 2</a>
                     <a class="menu-link" href="3.html" title="Práctica 3">Práctica 3</a>
                     <a class="menu-link" href="4.html" title="Práctica 4">Práctica 4</a>
                     <a class="menu-link" href="5.html" title="Práctica 5">Práctica 5</a>
