--- a/index.html
+++ b/index.html
@@ -27,9 +27,16 @@
                 <a href="3.html" class="list-group-item list-group-item-action">Práctica 3</a>
                 <a href="4.html" class="list-group-item list-group-item-action">Práctica 4</a>
                 <a href="5.html" class="list-group-item list-group-item-action">Práctica 5</a>
-                <a href="1_6_1.html" class="list-group-item list-group-item-action">Práctica 6_1</a>
-                <a href="1_6__2.html" class="list-group-item list-group-item-action">Práctica 6_2</a>
-                <a href="1_6__3.html" class="list-group-item list-group-item-action">Práctica 6_3</a>
+                <a href="6_1.html" class="list-group-item list-group-item-action">Práctica 6_1</a>
+                <a href="6__2.html" class="list-group-item list-group-item-action">Práctica 6_2</a>
+                <a href="6__3.html" class="list-group-item list-group-item-action">Práctica 6_3</a>
+                <a href="7.html" class="list-group-item list-group-item-action">Práctica 7</a>
+                <a href="8.html" class="list-group-item list-group-item-action">Práctica 8</a>
+                <a href="9.html" class="list-group-item list-group-item-action">Práctica 9</a>
+                <a href="10.html" class="list-group-item list-group-item-action">Práctica 10</a>
+                <a href="11.html" class="list-group-item list-group-item-action">Práctica 11</a>
+                <a href="12.html" class="list-group-item list-group-item-action">Práctica 12</a>
+                <a href="final.html" class="list-group-item list-group-item-action">Práctica FINAL</a>
             </div>
         </div>
     </div>
