--- a/6__3.html
+++ b/6__3.html
@@ -38,7 +38,7 @@
 
 </head>
 
-<body  style="text-align: center;font-family: Arial ;background-color: #ffeff7">
+<body  style="font-family: Arial ;background-color: #ffeff7">
 
     <div class="menu">
         <p class="menu-title">Menú</p>
